# vector-search-platform

./: AGENTS.md  README.md  requirements-dev.txt
algos/hnsw-core/: pyproject.toml
algos/hnsw-core/tests/: test_contracts.py  test_distance.py  test_eval.py  test_index_basic.py  test_serialize.py
benchmarks/: README.md  distributed_run.py  run.py
docs/: PRD.md
docs/architecture/: contracts.md
modules/agent-planning-kit/: README.md  module.json
modules/agent-planning-kit/prompts/: execution_prompt.md  planning_prompt.md
modules/agent-planning-kit/scripts/: bootstrap_phase.py  claim_next_ticket.sh  run_agent_loop.sh  update_tracker_status.py  validate_dependencies.py
modules/agent-planning-kit/templates/: agent_handoff.template.md  jira_dependencies.template.csv  jira_tasks.template.csv  jira_tracker.template.csv  parallelization.template.md  tracking_guide.template.md
planning/: agent_handoff.md  jira_phase1.csv  jira_phase1_dependencies.csv  jira_phase1_tracker.csv  jira_phase2.csv  jira_phase2_dependencies.csv  jira_phase2_tracker.csv  jira_phase3.csv  jira_phase3_dependencies.csv  jira_phase3_tracker.csv  parallelization.md  parallelization_phase2.md  parallelization_phase3.md  tracking_guide.md
services/vector-search-service/: pyproject.toml
services/vector-search-service/src/vector_search_service/: __init__.py  api.py  cli.py  cluster.py  models.py  queue_sqlite.py  routing.py  state.py  worker.py
services/vector-search-service/tests/: test_cli.py  test_distributed.py  test_e2e.py  test_routing.py  test_status.py
(+6 files in other folders)
