[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-search-service"
version = "0.1.0"
description = "Vector search HTTP service"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.0",
  "numpy>=1.24",
]

[project.scripts]
vss = "vector_search_service.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
